# os-rs

./: Cargo.toml  README.md  x86_64-rust-os.json
.cargo/: config
src/: lib.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
