[package]
name = "rust_os"
version = "0.1.0"
authors = ["skim"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.8.9"
spin = "0.5.2"
volatile = "0.2.6"
uart_16550 = "0.2.4"
x86_64 = "0.9.6"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300
